; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_cmd_whatchanged.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_cmd_whatchanged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i64 }
%struct.setup_revision_opt = type { i8*, i32 }

@git_log_config = common dso_local global i32 0, align 4
@the_repository = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@REVARG_COMMITTISH = common dso_local global i32 0, align 4
@DIFF_FORMAT_RAW = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_whatchanged(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.rev_info, align 8
  %8 = alloca %struct.setup_revision_opt, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = call i32 (...) @init_log_defaults()
  %10 = load i32, i32* @git_log_config, align 4
  %11 = call i32 @git_config(i32 %10, i32* null)
  %12 = load i32, i32* @the_repository, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @repo_init_revisions(i32 %12, %struct.rev_info* %7, i8* %13)
  %15 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %7, i32 0, i32 0
  store i32 1, i32* %15, align 8
  %16 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %7, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = call i32 @memset(%struct.setup_revision_opt* %8, i32 0, i32 16)
  %18 = getelementptr inbounds %struct.setup_revision_opt, %struct.setup_revision_opt* %8, i32 0, i32 0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %18, align 8
  %19 = load i32, i32* @REVARG_COMMITTISH, align 4
  %20 = getelementptr inbounds %struct.setup_revision_opt, %struct.setup_revision_opt* %8, i32 0, i32 1
  store i32 %19, i32* %20, align 8
  %21 = load i32, i32* %4, align 4
  %22 = load i8**, i8*** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @cmd_log_init(i32 %21, i8** %22, i8* %23, %struct.rev_info* %7, %struct.setup_revision_opt* %8)
  %25 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %7, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %3
  %30 = load i64, i64* @DIFF_FORMAT_RAW, align 8
  %31 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %7, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  store i64 %30, i64* %32, align 8
  br label %33

33:                                               ; preds = %29, %3
  %34 = call i32 @cmd_log_walk(%struct.rev_info* %7)
  ret i32 %34
}

declare dso_local i32 @init_log_defaults(...) #1

declare dso_local i32 @git_config(i32, i32*) #1

declare dso_local i32 @repo_init_revisions(i32, %struct.rev_info*, i8*) #1

declare dso_local i32 @memset(%struct.setup_revision_opt*, i32, i32) #1

declare dso_local i32 @cmd_log_init(i32, i8**, i8*, %struct.rev_info*, %struct.setup_revision_opt*) #1

declare dso_local i32 @cmd_log_walk(%struct.rev_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
